# continuous-rag-eval-tutorial

./: .gitignore  pyproject.toml
.circleci/: config.yml
.github/workflows/: eval.yml  tests.yml
continuous_rag_eval/: __init__.py  rag.py
eval/: edited_chain_runs.json  eval_dataset.json  langsmith_eval_test.py  ragas_eval.py  ragas_eval_test.py  thresholds.json
eval/data/: Create_eval_dataset_from_HotpotQA.ipynb  context_without_questions.json  questions.json  questions_without_context.json
eval/eval/data/: questions_without_context.json
tests/: rag_test.py  test_rag.py
